<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AwesomeValidationDemo</string>
    <string name="edt_userid">User ID</string>
    <string name="edt_password">Password</string>
    <string name="edt_password_confirmation">Re-enter password</string>
    <string name="edt_email">Email Address</string>
    <string name="edt_ip">IP Address</string>
    <string name="edt_tel">Telephone number</string>
    <string name="edt_zipcode">Zip Code</string>
    <string name="edt_firstname">First Name</string>
    <string name="edt_lastname">Last Name</string>
    <string name="edt_year">Year</string>
    <string name="edt_height">Height (m)</string>
    <string name="edt_birthday">Date of birth e.g 18/12/1983</string>
    <string name="btn_done">Submit</string>
    <string name="btn_clr">Clear</string>
    <string name="err_userid">Letters, numbers, underscores or hyphens</string>
    <string name="err_password">The password should contain at least 8 characters, including at least one lower case letter, one upper case letter, one number and one punctuation mark</string>
    <string name="err_password_confirmation">Please re-enter the password</string>
    <string name="err_name">Human name please</string>
    <string name="err_email">Email address please</string>
    <string name="err_ip">IP address please</string>
    <string name="err_tel">Telephone Number please</string>
    <string name="err_zipcode">Number only</string>
    <string name="err_year">Year must be between 1900 and this year</string>
    <string name="err_height">Human height should be between 0 to 2.72 meters</string>
    <string name="err_birth">Birthday should be like Day/Month/Year, and must be >= 18</string>
    <string name="err_tech_stacks">Must choose one tech stack</string>
    <string name="img_success">Success</string>
    <string-array name="styles">
        <item>BASIC</item>
        <item>COLORATION</item>
        <item>UNDERLABEL</item>
        <item>TEXT_INPUT_LAYOUT</item>
    </string-array>
    <string-array name="tech_stacks">
        <item>&lt; Please select one &gt;</item>
        <item>Backend</item>
        <item>Frontend</item>
        <item>Mobile</item>
        <item>Data</item>
        <item>Fullstack</item>
    </string-array>

</resources>
